--- a/betashop-theme.mysapo.net/index.html
+++ b/betashop-theme.mysapo.net/index.html
@@ -342,13 +342,13 @@
 
 <form action="https://betashop-theme.mysapo.net/cart/add" method="post" class="variants wishItem" data-cart-form data-id="product-actions-920244" enctype="multipart/form-data">
 	<div class="product-thumbnail">
-		<a class="product_overlay" href="internet-tivi-led-sony-kdl-32r500c-32-inch.html" title="Internet Tivi LED Sony KDL-32R500C"></a>
-		<a class="image_thumb" href="internet-tivi-led-sony-kdl-32r500c-32-inch.html" title="Internet Tivi LED Sony KDL-32R500C">
+		<a class="product_overlay" href="product-details.html" title="Internet Tivi LED Sony KDL-32R500C"></a>
+		<a class="image_thumb" href="product-details.html" title="Internet Tivi LED Sony KDL-32R500C">
 			<img class="lazyload" width="200" height="200" src="../images/TSC-images_product/KW Series/KW12S-KW181S.png"" alt="KW12S-KW181S">
 		</a>		
 	</div>
 	<div class="product-info">
-		<h3 class="product-name"><a href="internet-tivi-led-sony-kdl-32r500c-32-inch.html" title="KW12S-KW181S">KW12S-KW181S</a></h3>
+		<h3 class="product-name"><a href="product-details.html" title="KW12S-KW181S">KW12S-KW181S</a></h3>
 	</div>
 </form>
 						</div>
