done api list all, detail product

--- a/tscshop/pages/list-product/all-micro.html
+++ b/tscshop/pages/list-product/all-micro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 
-<!-- Mirrored from betashop-theme.mysapo.net/collections/all by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2024 03:33:21 GMT -->
+<!-- Mirrored from tscshop/collections/all by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2024 03:33:21 GMT -->
 <!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 
@@ -14,126 +14,59 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta name="description" content="">
 	<title>TSC </title>
-	<meta name="keywords" content="Tất cả sản phẩm, betashop-theme, betashop-theme.mysapo.net" />
+	<meta name="keywords" content="Tất cả sản phẩm, betashop-theme, tscshop" />
 
 
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Tất cả sản phẩm">
 	<meta property="og:image"
-		content="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178">
+		content="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178">
 	<meta property="og:image:secure_url"
-		content="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178">
+		content="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178">
 
 	<meta property="og:description" content="">
 	<meta property="og:url" content="all.html">
 	<meta property="og:site_name" content="betashop-theme">
-	<link rel="icon" href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png?1676344656178"
+	<link rel="icon" href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png"
 		type="image/x-icon" />
 
 	<link rel="preload" as="script"
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/jquery.min8331.js?1676344656178" />
-	<script src="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/jquery.min8331.js?1676344656178"
+		href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/jquery.min8331.js" />
+	<script src="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/jquery.min8331.js"
 		type="text/javascript"></script>
 	<link rel="preload" as="script"
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/lazy8331.js?1676344656178" />
-	<script src="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/lazy8331.js?1676344656178"
+		href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/lazy8331.js" />
+	<script src="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/lazy8331.js"
 		type="text/javascript"></script>
-	<script>
-		$(document).ready(function ($) {
-			awe_lazyloadImage();
-		});
-		function awe_lazyloadImage() {
-			var ll = new LazyLoad({
-				elements_selector: ".lazyload",
-				load_delay: 100,
-				threshold: 0
-			});
-		} window.awe_lazyloadImage = awe_lazyloadImage;
-	</script>
+	
 	<link rel="preload" as="script"
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/swiper.min8331.js?1676344656178" />
-	<script src="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/swiper.min8331.js?1676344656178"
+		href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/swiper.min8331.js" />
+	<script src="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/swiper.min8331.js"
 		type="text/javascript"></script>
 	<!-- Bizweb javascript customer -->
 
-	<link rel="preload" as="script"
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/main8331.js?1676344656178" />
-
-
-	<link rel="preload" as="script"
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/api_bizweb8331.js?1676344656178"
-		type="text/javascript">
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/ajaxcart.scss8331.css?1676344656178"
-		rel="stylesheet" type="text/css" media="all" />
-
-	<link rel="preload" as="style"
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/ajaxcart.scss8331.css?1676344656178"
-		type="text/css">
+		<div class="backdrop__body-backdrop___1rvky"></div>
+	<link rel="preconnect" href="https://fonts.googleapis.com/">
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 	<link rel="preload stylesheet" as='style' type="text/css"
 		href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&amp;display=swap">
-	<link rel="preload" as='style'
-		href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/swiper-style.scss8331.css?1676344656178">
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/swiper-style.scss8331.css?1676344656178"
-		rel="stylesheet" type="text/css" media="all" />
+		
 	<!--------------------------------------------------------------------------------------------------->
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/header.scss8331.css"
+	<link href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/header.scss8331.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/bootstrap8331.css"
+	<link href="/assets/vendor/bootstrap/css/bootstrap.min.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/sidebar_style.scss8331.css"
+	<link href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/sidebar_style.scss8331.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/collection_style.scss8331.css"
+	<link href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/collection_style.scss8331.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/responsive.scss8331.css"
+	<link href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/responsive.scss8331.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/quickviews.scss8331.css"
+	<link href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/quickviews.scss8331.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<link href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/main.scss8331.css"
+	<link href="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/main.scss8331.css"
 		rel="stylesheet" type="text/css" media="all" />
-	<script>
-		(function () {
-			function asyncLoad() {
-				var urls = [];
-				for (var i = 0; i < urls.length; i++) {
-					var s = document.createElement('script');
-					s.type = 'text/javascript';
-					s.async = true;
-					s.src = urls[i];
-					var x = document.getElementsByTagName('script')[0];
-					x.parentNode.insertBefore(s, x);
-				}
-			};
-			window.attachEvent ? window.attachEvent('onload', asyncLoad) : window.addEventListener('load', asyncLoad, false);
-		})();
-	</script>
-
-	<script src="../dist/js/stats.minbadf.js?v=96f2ff2"></script>
-	
-<style>
-	.pagination {
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    .pagination button {
-      padding: 10px 15px;
-      margin: 0 5px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .pagination button.active {
-      background-color: #28a745;
-    }
-
-    .pagination button:disabled {
-      background-color: #ddd;
-      cursor: not-allowed;
-    }
-</style>
+	<link href="/assets/css/pagination.css" rel="stylesheet" type="text/css" media="all"/>
 </head>
 
 <body>
@@ -180,9 +113,9 @@
 					<div class="col-xl-3 col-md-3 col-12 col-header">
 						<div class="logo_center">
 							<div class="logo">
-								<a href="../index.html" class="logo-wrapper ">
+								<a href="/tscshop/index.html" class="logo-wrapper">
 									<img width="150" height="40"
-										src="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
+										src="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo.png?1676344656178"
 										alt="logo betashop-theme">
 								</a>
 							</div>
@@ -190,7 +123,7 @@
 					</div>
 					<div class="col-md-6 col-12">
 						<div class="header_search" style="margin-top: 25px;">
-							<form action="https://betashop-theme.mysapo.net/search" method="get"
+							<form action="https://tscshop/search" method="get"
 								class="input-group search-bar" role="search">
 								<input type="text" name="query" value="" autocomplete="off" placeholder="Tìm kiếm"
 									class="input-group-field auto-search" required="">
@@ -229,7 +162,7 @@
 				<nav class="header-nav">
 					<ul class="item_big">
 						<li class="nav-item  active ">
-							<a class="a-img" href="index.html" title="Home">
+							<a class="a-img" href="/tscshop/index.html" title="Home">
 								<span>Home</span>
 							</a>
 						</li>
@@ -249,15 +182,16 @@
 							<i class="icon icon-plus"></i>
 							<ul class="item_small level0">
 								<li class="level1">
-									<a href="tivi.html" title="Tivi">product 1</a>
+								  <a href="/tscshop/pages/list-product/all-speaker.html" title="Speaker">Speaker</a>
 								</li>
 								<li class="level1">
-									<a href="tu-lanh.html" title="Tủ lạnh">product 2</a>
+								  <a href="/tscshop/pages/list-product/all-amplifier.html" title="Amplifier">Amplifier</a>
 								</li>
 								<li class="level1">
-									<a href="may-giat.html" title="Máy giặt">product 3</a>
+								  <a href="/tscshop/pages/list-product/all-micro.html" title="Micro">Micro</a>
 								</li>
-							</ul>
+								  
+							  </ul>
 						</li>
 					</ul>
 				</nav>
@@ -275,7 +209,7 @@
 							<a href="../index.html"><span>Home</span></a>
 							<span class="mr_lr">&nbsp;/&nbsp;</span>
 						</li>
-						<li><strong><span> Products</span></strong></li>
+						<li><strong><span>Micro Products</span></strong></li>
 					</ul>
 				</div>
 			</div>
@@ -305,108 +239,20 @@
 								</div>
 							</div>
 
-							<script>
-								$(function () {
-									$('#sortBy').bind('change', function () {
-										var url = window.location.href;
-										url = replaceUrlParam(url, 'sortby', $(this).val());
-										window.location.href = url;
-									});
-									$('.switch-view').bind('click', function () {
-										var url = window.location.href;
-										url = replaceUrlParam(url, 'view', $(this).data('view'));
-										window.location.href = url;
-									});
-									function replaceUrlParam(url, paramName, paramValue) {
-										var pattern = new RegExp('(' + paramName + '=).*?(&|$)'),
-											newUrl = url.replace(pattern, '$1' + paramValue + '$2');
-										if (newUrl == url) {
-											newUrl = newUrl + (newUrl.indexOf('?') > 0 ? '&' : '?') + paramName + '=' + paramValue;
-										}
-										return newUrl;
-									}
-
-									$(document).ready(function ($) {
-										function getParameterByName(name, href) {
-											name = name.replace(/[\[]/, "\\\[").replace(/[\]]/, "\\\]");
-											var regexS = "[\\?&]" + name + "=([^&#]*)";
-											var regex = new RegExp(regexS);
-											var results = regex.exec(href);
-											if (results == null)
-												return "";
-											else
-												return decodeURIComponent(results[1].replace(/\+/g, " "));
-										}
-
-										var tt = getParameterByName("sortby", window.location.href);
-										if (tt != '') {
-											$('#sortBy option[value=' + tt + ']').attr('selected', 'selected');
-										}
-
-									});
-
-								});
-
-							</script>
-
 							<section
 								class="products-view view-grid products-view-grid collection_reponsive list_hover_pro">
-								<div class="row row-10Gutter" id="list-all-product">
-									<div class="col-12 col-md-4 col-lg-4 col-xl-4 product-col">
-										<div class="item_product_main">
-											<div class="variants wishItem">
-												<div class="product-thumbnail">
-													<a class="product_overlay"
-														href="../may-giat-toshiba-aw-me1050gv.html"
-														title="MÁY GIẶT TOSHIBA AW-ME1050GV"></a>
-													<a class="image_thumb" href="../may-giat-toshiba-aw-me1050gv.html"
-														title="MÁY GIẶT TOSHIBA AW-ME1050GV">
-														<img class="lazyload" width="200" height="200"
-															src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsQAAA7EAZUrDhsAAAANSURBVBhXYzh8+PB/AAffA0nNPuCLAAAAAElFTkSuQmCC"
-															data-src="//bizweb.dktcdn.net/thumb/large/100/039/691/products/may-giat-toshiba-me1050gv-wd-10.jpg?v=1452313941757"
-															alt="MÁY GIẶT TOSHIBA AW-ME1050GV">
-													</a>
-
-												</div>
-												<div class="product-info">
-													<h3 class="product-name"><a
-															href="../may-giat-toshiba-aw-me1050gv.html"
-															title="MÁY GIẶT TOSHIBA AW-ME1050GV">MÁY GIẶT TOSHIBA
-															AW-ME1050GV</a></h3>
-												</div>
-											</div>
-										</div>
+								<div class="row row-10Gutter listAllMicro">
+									<div class="loading-message text-center fs-2">
+											Loading...
 									</div>
+									<!-- data micro-->
 								</div>
 							</section>
 							<div class="section pagenav">
 								<nav class="clearfix relative nav_pagi w_100">
 									<ul class="pagination clearfix" id="list-pagination">
-										<li class="page-item disabled">
-											<a class="page-link" href="#">
-												<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-													<path
-														d="M223.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L319.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L393.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34zm-192 34l136 136c9.4 9.4 24.6 9.4 33.9 0l22.6-22.6c9.4-9.4 9.4-24.6 0-33.9L127.9 256l96.4-96.4c9.4-9.4 9.4-24.6 0-33.9L201.7 103c-9.4-9.4-24.6-9.4-33.9 0l-136 136c-9.5 9.4-9.5 24.6-.1 34z" />
-												</svg>
-											</a>
-										</li>
-										<li class="active page-item disabled"><a class="page-link" href="#">1</a></li>
-										<li class="page-item"><a class="page-link" href="all4658.html?page=2">2</a></li>
-										<li class="page-item"><a class="page-link" href="all9ba9.html?page=3">3</a></li>
-										<li class="page-item"><a class="page-link" href="allfdb0.html?page=4">4</a></li>
-										<li class="page-item"><a class="page-link" href="allaf4d.html?page=5">5</a></li>
-										<li class="page-item"><a class="page-link" href="allc575.html?page=6">6</a></li>
-										<li class="page-item"><a class="page-link" href="all235c.html?page=7">7</a></li>
-										<li class="page-item hidden-xs">
-											<a class="page-link" href="all4658.html?page=2">
-												<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-													<path
-														d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34zm192-34l-136-136c-9.4-9.4-24.6-9.4-33.9 0l-22.6 22.6c-9.4 9.4-9.4 24.6 0 33.9l96.4 96.4-96.4 96.4c-9.4 9.4-9.4 24.6 0 33.9l22.6 22.6c9.4 9.4 24.6 9.4 33.9 0l136-136c9.4-9.2 9.4-24.4 0-33.8z" />
-												</svg>
-											</a>
-										</li>
+									
 									</ul>
-									<!-- <div class="pagination" ></div> -->
 								</nav>
 							</div>
 						</div>
@@ -580,28 +426,9 @@
 					class=""></path>
 			</svg></a>
 	</footer>
-	<div id="sidebar-all" class="d-none">
-		<div class="sidebar-all-wrap-right container" data-type="wishlist">
-			<div class="sidebar-all-wrap-right-main">
-				<div class="sidebar-all-wrap-right-main-list row">
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<link rel="preload" href="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/wishlist8331.js?1676344656178"
-		as="script">
-	<script src="../../bizweb.dktcdn.net/100/039/691/themes/895040/assets/wishlist8331.js?1676344656178"
-		type="text/javascript"></script>
-	<div class="backdrop__body-backdrop___1rvky"></div>
-	<link rel="preconnect" href="https://fonts.googleapis.com/">
-	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&amp;display=swap"
-		rel="stylesheet">
 	
-	<script defer type="text/javascript" src="/assets/js/api/listProduc.js"></script>
+	<script defer type="text/javascript" src="/assets/js/api/list/list-micro.js"></script>
 </body>
 
-<!-- Mirrored from betashop-theme.mysapo.net/collections/all by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2024 03:33:33 GMT -->
 
 </html>
