edit client admin page

--- a/tscshop/pages/list-product/all-micro.html
+++ b/tscshop/pages/list-product/all-micro.html
@@ -122,21 +122,6 @@
 						</div>
 					</div>
 					<div class="col-md-6 col-12">
-						<div class="header_search" style="margin-top: 25px;">
-							<form action="https://tscshop/search" method="get"
-								class="input-group search-bar" role="search">
-								<input type="text" name="query" value="" autocomplete="off" placeholder="Tìm kiếm"
-									class="input-group-field auto-search" required="">
-								<span class="input-group-btn">
-									<button type="submit" class="btn icon-fallback-text">
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-											<path
-												d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z" />
-										</svg>
-									</button>
-								</span>
-							</form>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -172,7 +157,7 @@
 							</a>
 						</li>
 						<li class="nav-item level0 ">
-							<a class="a-img" href="collections/all.html" title="Products">
+							<a class="a-img" title="Products">
 								Products <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
 									class="fa-caret-down">
 									<path
