--- a/index.html
+++ b/index.html
@@ -219,38 +219,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-12">
-              <div class="header_search" style="margin-top: 25px">
-                <form
-                  action="https://tscshop/search"
-                  method="get"
-                  class="input-group search-bar"
-                  role="search"
-                >
-                  <input
-                    type="text"
-                    name="query"
-                    value=""
-                    autocomplete="off"
-                    placeholder="Tìm kiếm"
-                    class="input-group-field auto-search"
-                    required=""
-                  />
-                  <span class="input-group-btn">
-                    <button type="submit" class="btn icon-fallback-text">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512"
-                      >
-                        <path
-                          d="M500.3 443.7l-119.7-119.7c27.22-40.41 40.65-90.9 33.46-144.7C401.8 87.79 326.8 13.32 235.2 1.723C99.01-15.51-15.51 99.01 1.724 235.2c11.6 91.64 86.08 166.7 177.6 178.9c53.8 7.189 104.3-6.236 144.7-33.46l119.7 119.7c15.62 15.62 40.95 15.62 56.57 0C515.9 484.7 515.9 459.3 500.3 443.7zM79.1 208c0-70.58 57.42-128 128-128s128 57.42 128 128c0 70.58-57.42 128-128 128S79.1 278.6 79.1 208z"
-                        />
-                      </svg>
-                    </button>
-                  </span>
-                </form>
-              </div>
-            </div>
+            <div class="col-md-6 col-12"></div>
           </div>
         </div>
       </div>
@@ -285,7 +254,7 @@
                 </a>
               </li>
               <li class="nav-item level0">
-                <a class="a-img" href="collections/all.html" title="Products">
+                <a class="a-img" title="Products">
                   Products
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -395,7 +364,11 @@
                   d="M501.6 4.186c-7.594-5.156-17.41-5.594-25.44-1.063L12.12 267.1C4.184 271.7-.5037 280.3 .0431 289.4c.5469 9.125 6.234 17.16 14.66 20.69l153.3 64.38v113.5c0 8.781 4.797 16.84 12.5 21.06C184.1 511 188 512 191.1 512c4.516 0 9.038-1.281 12.99-3.812l111.2-71.46l98.56 41.4c2.984 1.25 6.141 1.875 9.297 1.875c4.078 0 8.141-1.031 11.78-3.094c6.453-3.625 10.88-10.06 11.95-17.38l64-432C513.1 18.44 509.1 9.373 501.6 4.186zM369.3 119.2l-187.1 208.9L78.23 284.7L369.3 119.2zM215.1 444v-49.36l46.45 19.51L215.1 444zM404.8 421.9l-176.6-74.19l224.6-249.5L404.8 421.9z"
                 />
               </svg>
-              <a href="san-pham-noi-bat.html" title="Product 3">Speaker</a>
+              <a
+                href="/tscshop/pages/list-product/all-speaker.html"
+                title="Product 3"
+                >Speaker</a
+              >
             </h2>
           </div>
           <div class="section-product">
@@ -422,7 +395,11 @@
                   d="M501.6 4.186c-7.594-5.156-17.41-5.594-25.44-1.063L12.12 267.1C4.184 271.7-.5037 280.3 .0431 289.4c.5469 9.125 6.234 17.16 14.66 20.69l153.3 64.38v113.5c0 8.781 4.797 16.84 12.5 21.06C184.1 511 188 512 191.1 512c4.516 0 9.038-1.281 12.99-3.812l111.2-71.46l98.56 41.4c2.984 1.25 6.141 1.875 9.297 1.875c4.078 0 8.141-1.031 11.78-3.094c6.453-3.625 10.88-10.06 11.95-17.38l64-432C513.1 18.44 509.1 9.373 501.6 4.186zM369.3 119.2l-187.1 208.9L78.23 284.7L369.3 119.2zM215.1 444v-49.36l46.45 19.51L215.1 444zM404.8 421.9l-176.6-74.19l224.6-249.5L404.8 421.9z"
                 />
               </svg>
-              <a href="san-pham-noi-bat.html" title="Product 3">Amplifier</a>
+              <a
+                href="/tscshop/pages/list-product/all-amplifier.html"
+                title="Product 3"
+                >Amplifier</a
+              >
             </h2>
           </div>
           <div class="section-product">
@@ -449,7 +426,11 @@
                   d="M501.6 4.186c-7.594-5.156-17.41-5.594-25.44-1.063L12.12 267.1C4.184 271.7-.5037 280.3 .0431 289.4c.5469 9.125 6.234 17.16 14.66 20.69l153.3 64.38v113.5c0 8.781 4.797 16.84 12.5 21.06C184.1 511 188 512 191.1 512c4.516 0 9.038-1.281 12.99-3.812l111.2-71.46l98.56 41.4c2.984 1.25 6.141 1.875 9.297 1.875c4.078 0 8.141-1.031 11.78-3.094c6.453-3.625 10.88-10.06 11.95-17.38l64-432C513.1 18.44 509.1 9.373 501.6 4.186zM369.3 119.2l-187.1 208.9L78.23 284.7L369.3 119.2zM215.1 444v-49.36l46.45 19.51L215.1 444zM404.8 421.9l-176.6-74.19l224.6-249.5L404.8 421.9z"
                 />
               </svg>
-              <a href="san-pham-noi-bat.html" title="Product 3">Micro</a>
+              <a
+                href="/tscshop/pages/list-product/all-micro.html"
+                title="Product 3"
+                >Micro</a
+              >
             </h2>
           </div>
           <div class="section-product">
@@ -661,22 +642,7 @@
               id="copyright"
               class="col-lg-12 col-md-12 col-xs-12 fot_copyright"
             >
-              <div class="wsp">
-                <span class="mobile"
-                  >© Bản quyền thuộc về <b>Caffein Team</b>
-                  <span class="dash hidden-xs">|</span>
-                </span>
-
-                <span class="opacity1">Cung cấp bởi</span>
-
-                <a
-                  href="https://www.sapo.vn/?utm_campaign=cpn:kho_theme-plm:footer&amp;utm_source=Tu_nhien&amp;utm_medium=referral&amp;utm_content=fm:text_link-km:-sz:&amp;utm_term=&amp;campaign=kho_theme-sapo"
-                  rel="nofollow"
-                  title="Sapo"
-                  target="_blank"
-                  >Sapo</a
-                >
-              </div>
+              <div class="wsp">TSShop</div>
             </div>
           </div>
         </div>
