--- a/tscshop/pages/admin/add-micro.html
+++ b/tscshop/pages/admin/add-micro.html
@@ -34,12 +34,13 @@
             </div>
             <div class="row mb-3 mt-3">
                 <div class="col-sm-2">
-                    <label for="microName" class="form-label">Micro name:</label>
+                    <label for="description" class="form-label">Description:</label>
                 </div>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="microName" placeholder="Enter" name="microName">
+                    <textarea class="form-control" id="description" placeholder="Enter" name="description" rows="4"></textarea>
                 </div>
             </div>
+            
             <div class="row mb-3 mt-3">
                 <div class="col-sm-2">
                     <label for="frequencyRangeCha" class="form-label">Frequency Range A:</label>
