add some input lines

--- a/tscshop/pages/admin/add-micro.html
+++ b/tscshop/pages/admin/add-micro.html
@@ -83,6 +83,14 @@
             </div>
             <div class="row mb-3 mt-3">
                 <div class="col-sm-2">
+                    <label for="frequencyResponseSystemParam" class="form-label">Frequency response System Parameter:</label>
+                </div>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="frequencyResponseSystemParam" placeholder="Enter" name="frequencyResponseSystemParam">
+                </div>
+            </div>
+            <div class="row mb-3 mt-3">
+                <div class="col-sm-2">
                     <label for="workingDistance" class="form-label">Working Distance:</label>
                 </div>
                 <div class="col-sm-10">
@@ -211,10 +219,10 @@
             </div>
             <div class="row mb-3 mt-3">
                 <div class="col-sm-2">
-                    <label for="frequencyResponse" class="form-label">Frequency Response:</label>
+                    <label for="frequencyResponseTransmitterParam" class="form-label">Frequency Response Transmitter Parameter:</label>
                 </div>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="frequencyResponse" placeholder="Enter" name="frequencyResponse">
+                    <input type="text" class="form-control" id="frequencyResponseTransmitterParam" placeholder="Enter" name="frequencyResponseTransmitterParam">
                 </div>
             </div>
             <div class="row mb-3 mt-3">
