done edit product

--- a/index.html
+++ b/index.html
@@ -8,28 +8,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#f02b2b" />
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="/index.html" />
     <meta name="revisit-after" content="2 days" />
     <meta name="robots" content="noodp,index,follow" />
     <meta
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="description" content="Với giao diện được thiết kế đơn giản" />
     <title>TSC</title>
 
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Giao diện" />
-    <meta
-      property="og:image"
-      content="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178"
-    />
-    <meta
-      property="og:image:secure_url"
-      content="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178"
-    />
-
-    <meta property="og:url" content="index.html" />
     <link
       rel="icon"
       href="../bizweb.dktcdn.net/100/039/691/themes/895040/assets/favicon8331.png?1676344656178"
@@ -426,7 +413,7 @@
             <div class="col-lg-6 col-md-7 col-12">
               <ul class="menu_footer">
                 <li>
-                  <a href="index.html" title="Home">Home</a>
+                  <a href="/index.html" title="Home">Home</a>
                 </li>
 
                 <li>
@@ -578,7 +565,7 @@
                 <h4 class="title-menu clicked">News</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -596,7 +583,7 @@
                 <h4 class="title-menu clicked">Support</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -649,11 +636,7 @@
       type="text/javascript"
     ></script>
     <div class="backdrop__body-backdrop___1rvky"></div>
-    <script
-      defer
-      type="text/javascript"
-      src="../assets/js/api/home.js"
-    ></script>
+    <script defer type="text/javascript" src="/assets/js/api/home.js"></script>
   </body>
 
   <!-- Mirrored from tscshop/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 17 Sep 2024 03:33:16 GMT -->
