--- a/tscshop/gioi-thieu.html
+++ b/tscshop/gioi-thieu.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="theme-color" content="#f02b2b" />
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="/index.html" />
     <meta name="revisit-after" content="2 days" />
     <meta name="robots" content="noodp,index,follow" />
     <meta
@@ -43,7 +43,7 @@
       property="og:description"
       content="Với giao diện được thiết kế đơn giản, phù hợp với nhiều ngành nghề Betashop chính là gợi ý tuyệt với cho các website điện máy"
     />
-    <meta property="og:url" content="index.html" />
+    <meta property="og:url" content="/index.html" />
     <meta property="og:site_name" content="betashop-theme" />
     <link
       rel="icon"
@@ -279,7 +279,7 @@
             <div class="col-xl-3 col-md-3 col-12 col-header">
               <div class="logo_center">
                 <div class="logo">
-                  <a href="index.html" class="logo-wrapper">
+                  <a href="/index.html" class="logo-wrapper">
                     <img
                       width="150"
                       height="40"
@@ -394,7 +394,7 @@
           <div class="col-xs-12 a-left">
             <ul class="breadcrumb">
               <li class="home">
-                <a href="index.html"><span>Home</span></a>
+                <a href="/index.html"><span>Home</span></a>
                 <span class="mr_lr">&nbsp;/&nbsp;</span>
               </li>
 
@@ -509,7 +509,7 @@
             <div class="col-lg-6 col-md-7 col-12">
               <ul class="menu_footer">
                 <li>
-                  <a href="index.html" title="Home">Home</a>
+                  <a href="/index.html" title="Home">Home</a>
                 </li>
 
                 <li>
@@ -661,7 +661,7 @@
                 <h4 class="title-menu clicked">News</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -679,7 +679,7 @@
                 <h4 class="title-menu clicked">Support</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
