--- a/tscshop/pages/detail-product/amplifier-detail.html
+++ b/tscshop/pages/detail-product/amplifier-detail.html
@@ -191,7 +191,7 @@
             <div class="col-xl-3 col-md-3 col-12 col-header">
               <div class="logo_center">
                 <div class="logo">
-                  <a href="index.html" class="logo-wrapper">
+                  <a href="/index.html" class="logo-wrapper">
                     <img
                       width="150"
                       height="40"
@@ -305,33 +305,8 @@
         </div>
       </div>
     </section>
-    <section
-      class="product details-main"
-      itemscope
-      itemtype="https://schema.org/Product"
-    >
-      <meta itemprop="category" content="" />
-      <meta itemprop="url" content="//tscshop/acer-e1-432k-intel-2955u" />
-      <meta itemprop="name" content="Acer E1-432k /Intel 2955U" />
-      <meta
-        itemprop="image"
-        content="/bizweb.dktcdn.net/thumb/grande/100/039/691/products/3619741616d7.jpg?v=1449539843620"
-      />
-      <meta itemprop="model" content="" />
-      <div
-        class="d-none hidden"
-        id="https://tscshop"
-        itemprop="seller"
-        itemtype="http://schema.org/Organization"
-        itemscope
-      >
-        <meta itemprop="name" content="betashop-theme" />
-        <meta itemprop="url" content="index.html" />
-        <meta
-          itemprop="logo"
-          content="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178"
-        />
-      </div>
+    <section class="product details-main">
+      <div class="d-none hidden" id="https://tscshop" itemscope></div>
       <div
         id="add-to-cart-form"
         class="form_background form-inline margin-bottom-0"
@@ -517,7 +492,7 @@
             <div class="col-lg-6 col-md-7 col-12">
               <ul class="menu_footer">
                 <li>
-                  <a href="index.html" title="Home">Home</a>
+                  <a href="/index.html" title="Home">Home</a>
                 </li>
 
                 <li>
@@ -669,7 +644,7 @@
                 <h4 class="title-menu clicked">News</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -687,7 +662,7 @@
                 <h4 class="title-menu clicked">Support</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
