--- a/tscshop/pages/detail-product/mixer-detail.html
+++ b/tscshop/pages/detail-product/mixer-detail.html
@@ -304,19 +304,7 @@
         </div>
       </div>
     </section>
-    <section
-      class="product details-main"
-      itemscope
-      itemtype="https://schema.org/Product"
-    >
-      <meta itemprop="category" content="" />
-      <meta itemprop="url" content="//tscshop/acer-e1-432k-intel-2955u" />
-      <meta itemprop="name" content="Acer E1-432k /Intel 2955U" />
-      <meta
-        itemprop="image"
-        content="/bizweb.dktcdn.net/thumb/grande/100/039/691/products/3619741616d7.jpg?v=1449539843620"
-      />
-      <meta itemprop="model" content="" />
+    <section class="product details-main">
       <div
         class="d-none hidden"
         id="https://tscshop"
@@ -325,7 +313,7 @@
         itemscope
       >
         <meta itemprop="name" content="betashop-theme" />
-        <meta itemprop="url" content="index.html" />
+        <meta itemprop="url" content="/index.html" />
         <meta
           itemprop="logo"
           content="/bizweb.dktcdn.net/100/039/691/themes/895040/assets/logo8331.png?1676344656178"
@@ -516,7 +504,7 @@
             <div class="col-lg-6 col-md-7 col-12">
               <ul class="menu_footer">
                 <li>
-                  <a href="index.html" title="Home">Home</a>
+                  <a href="/index.html" title="Home">Home</a>
                 </li>
 
                 <li>
@@ -668,7 +656,7 @@
                 <h4 class="title-menu clicked">News</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -686,7 +674,7 @@
                 <h4 class="title-menu clicked">Support</h4>
                 <ul class="list-menu toggle-mn">
                   <li class="li_menu">
-                    <a href="index.html" title="Home">Home</a>
+                    <a href="/index.html" title="Home">Home</a>
                   </li>
 
                   <li class="li_menu">
@@ -739,7 +727,7 @@
     <script
       defer
       type="text/javascript"
-      src="/assets/js/api/detail/micro-detail.js"
+      src="/assets/js/api/detail/mixer-detail.js"
     ></script>
   </body>
 </html>
