--- a/tscshop/pages/list-product/all-micro.html
+++ b/tscshop/pages/list-product/all-micro.html
@@ -237,7 +237,7 @@
 					<div class="col-lg-6 col-md-7 col-12">
 						<ul class="menu_footer">
 							<li>
-								<a href="index.html" title="Home">Home</a>
+								<a href="/index.html" title="Home">Home</a>
 							</li>
 							<li>
 								<a href="gioi-thieu.html" title="About us">About us</a>
@@ -338,7 +338,7 @@
 							</h4>
 							<ul class="list-menu toggle-mn">
 								<li class="li_menu">
-									<a href="index.html" title="Home">Home</a>
+									<a href="/index.html" title="Home">Home</a>
 								</li>
 								<li class="li_menu">
 									<a href="gioi-thieu.html" title="About us">About us</a>
@@ -356,7 +356,7 @@
 							</h4>
 							<ul class="list-menu toggle-mn">
 								<li class="li_menu">
-									<a href="index.html" title="Home">Home</a>
+									<a href="/index.html" title="Home">Home</a>
 								</li>
 								<li class="li_menu">
 									<a href="gioi-thieu.html" title="About us">About us</a>
