authen for api, and optimize code and add js login

--- a/tscshop/pages/admin/add-form/add-form-micro.html
+++ b/tscshop/pages/admin/add-form/add-form-micro.html
@@ -261,20 +261,20 @@
                     aria-expanded="false"
                   >
                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                      Douglas McGee
+                      Admin
                     </span>
                   </button>
                   <div
                     class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                   >
-                    <a
+                    <button
                       class="dropdown-item"
-                      href="#"
+                      id="logoutBtn"
                       data-toggle="modal"
                       data-target="#logoutModal"
                     >
                       Logout
-                    </a>
+                    </button>
                   </div>
                 </div>
               </li>
@@ -881,43 +881,6 @@
     </a>
 
     <!-- Logout Modal-->
-    <div
-      class="modal fade"
-      id="logoutModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-            <button
-              class="close"
-              type="button"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Select "Logout" below if you are ready to end your current session.
-          </div>
-          <div class="modal-footer">
-            <button
-              class="btn btn-secondary"
-              type="button"
-              data-dismiss="modal"
-            >
-              Cancel
-            </button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="/assets/vendor/jquery/jquery.min.js"></script>
@@ -926,5 +889,6 @@
     <!-- Custom scripts for all pages-->
     <script src="/assets/js/sb-admin-2.js"></script>
     <script src="/assets/js/api/admin/micro.js"></script>
+    <script defer src="/assets/js/api/login.js"></script>
   </body>
 </html>
