--- a/tscshop/pages/admin/admin-index.html
+++ b/tscshop/pages/admin/admin-index.html
@@ -12,25 +12,6 @@
 
     <title>SB Admin 2 - Dashboard</title>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const token = localStorage.getItem('token');
-  
-        if (!token) {
-          alert('Please login to access');
-          window.location.href = 'login.html';
-        }
-
-        function logout() {
-          localStorage.removeItem('token');
-          window.location.href = 'login.html';
-        }
-
-        document.getElementById('logoutBtn').addEventListener('click', logout);
-  
-      });
-    </script>
-
     <!-- Custom fonts for this template-->
     <link
       href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
@@ -236,11 +217,20 @@
                     aria-expanded="false"
                   >
                     <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                      Douglas McGee
+                      Admin
                     </span>
                   </button>
-                  <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
-                    <Button class="dropdown-item" id="logoutBtn" data-toggle="modal" data-target="#logoutModal">Logout</Button>
+                  <div
+                    class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                  >
+                    <button
+                      class="dropdown-item"
+                      id="logoutBtn"
+                      data-toggle="modal"
+                      data-target="#logoutModal"
+                    >
+                      Logout
+                    </button>
                   </div>
                 </div>
               </li>
@@ -324,43 +314,6 @@
     </a>
 
     <!-- Logout Modal-->
-    <div
-      class="modal fade"
-      id="logoutModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-            <button
-              class="close"
-              type="button"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Select "Logout" below if you are ready to end your current session.
-          </div>
-          <div class="modal-footer">
-            <button
-              class="btn btn-secondary"
-              type="button"
-              data-dismiss="modal"
-            >
-              Cancel
-            </button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- Bootstrap core JavaScript-->
     <script src="/assets/vendor/jquery/jquery.min.js"></script>
@@ -369,5 +322,6 @@
     <!-- Custom scripts for all pages-->
     <script src="/assets/js/sb-admin-2.js"></script>
     <script src="/assets/js/api/admin/dashboard.js"></script>
+    <script defer src="/assets/js/api/login.js"></script>
   </body>
 </html>
