--- a/tscshop/pages/admin/mixer-list.html
+++ b/tscshop/pages/admin/mixer-list.html
@@ -182,6 +182,7 @@
             <!-- Topbar Search -->
             <form
               class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search"
+              
             >
               <div class="input-group">
                 <input
@@ -190,10 +191,11 @@
                   placeholder="Search for..."
                   aria-label="Search"
                   aria-describedby="basic-addon2"
+                  id="searchMixer"
                 />
                 <div class="input-group-append">
-                  <button class="btn btn-primary" type="button">
-                    <i class="fas fa-search fa-sm"></i>
+                  <button class="btn btn-primary" type="button" id="searchMixerBtn">
+                    Search
                   </button>
                 </div>
               </div>
